--- a/styles/Products/Products.module.scss
+++ b/styles/Products/Products.module.scss
@@ -41,4 +41,7 @@
   .products{
     display: contents;
   }
+  .leftContent{
+    margin-bottom: 50px;
+  }
 }
